# Yngine-O3DE

./: CMakeLists.txt  engine.json
.github/workflows/: android-build.yml
AutomatedTesting/: CMakeLists.txt  project.json
Code/Editor/: EditorViewportSettings.cpp  GotoPositionDlg.cpp  QtViewPaneManager.cpp  ViewManager.cpp
Code/Editor/Core/: EditorActionsHandler.cpp
Code/Editor/Util/: FileChangeMonitor.cpp
Code/LauncherUnified/: launcher_generator.cmake
CustomGems/MyFirstGem/: CMakeLists.txt  gem.json
CustomGems/MyFirstGem/Code/: CMakeLists.txt  myfirstgem_api_files.cmake  myfirstgem_editor_private_files.cmake  myfirstgem_editor_shared_files.cmake  myfirstgem_editor_tests_files.cmake  myfirstgem_private_files.cmake  myfirstgem_shared_files.cmake  myfirstgem_tests_files.cmake
CustomGems/MyFirstGem/Registry/: assetprocessor_settings.setreg
CustomGems/WindowPosition/: CMakeLists.txt  gem.json
Gems/MiniAudio/: CMakeLists.txt  gem.json
Gems/MiniAudio/Code/: CMakeLists.txt  miniaudio_private_files.cmake
Gems/MiniAudio/Code/Platform/iOS/: platform_ios.cmake
Gems/MiniAudio/Code/Source/Clients/: MiniAudioListenerComponentController.cpp  MiniAudioModule.cpp  MiniAudioPlaybackComponentController.cpp  MiniAudioSystemComponent.cpp  MiniAudioSystemComponent.h
Gems/OpenParticleSystem/: .gitattributes  CMakeLists.txt  gem.json
cmake/: 3rdParty.cmake  Gems.cmake  PAL.cmake  Packaging.cmake
python/: get_python.cmake  get_python_package_hash.cmake  python.sh
scripts/license_scanner/: license_scanner.py  scanner_config.json
(+808 files in other folders)
